# sppkeytoevdev

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: Doxyfile.in
headers/: bluetoothcomm.h  bluetoothrfcomm.h  connectionmanager.h  keyboard_defines.h  keymap.h  serialcomm.h  virtualkeyboard.h
src/: bluetoothcomm.cpp  bluetoothrfcomm.cpp  connectionmanager.cpp  keymap.cpp  main.cpp  serialcomm.cpp  virtualkeyboard.cpp
